# gb-emulator

core/: Cargo.toml
core/src/: bus.rs  io.rs  lib.rs  utils.rs
core/src/cart/: mod.rs
core/src/cpu/: mod.rs  opcodes.rs
core/src/ppu/: mod.rs  modes.rs  tile.rs
desktop/: Cargo.toml
desktop/src/: debug.rs  main.rs
html/: index.html  index.js  wasm.js  wasm_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
